# AnalisadorDePatrimonios2.0

./: CMakeLists.txt  arvores.cpp  arvores.h  camera.h  glad.c  glad.h  lista.cpp  lista.h  main.cpp  model_loading.cpp  model_loading.h  shader.h  structs.cpp  structs.h
model/: CentroFortaleza.fbx  centro.mtl
shader/: bboxshader.fs  gridshader.fs  gridshader.vs  lineshader.fs  shader.fs  shader.vs  shader_no_texture.fs
